PyMaker/datas/object2/RawHTML/i6401/Python_DOC_referPages.python-syntax-error-not-operator.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/6100305/why-is-true-not-false-a-syntax-error-in-python">Why is 'True == not False' a syntax error in Python?</a>
<span class="question-originals-answer-count">
                    3 answers
                </span>
</li>
</ul>
</div>
<p>This works:</p>
<pre><code>&gt;&gt;&gt; not(True)
False
&gt;&gt;&gt; a = {}
&gt;&gt;&gt; a["hidden"] = False
&gt;&gt;&gt; a["hidden"] = not(a["hidden"])
&gt;&gt;&gt; a["hidden"]
True
</code></pre>
<p>but not this:</p>
<pre><code>def toggleHelp(self, event):
    # https://stackoverflow.com/questions/10267465/showing-and-hiding-widgets#10268076
    if (self.special_frame["hidden"] == False):
        self.special_frame.grid_remove()
    else:
        self.special_frame.grid()
    self.special_frame["hidden"] == not(self.special_frame["hidden"])
</code></pre>
<p>error </p>
<pre><code> line 563
    self.special_frame["hidden"] == not(self.special_frame["hidden"])
                                      ^
SyntaxError: invalid syntax
</code></pre>
<p>in the init:</p>
<pre><code>self.special_frame["hidden"] = False
</code></pre>
<p>What I am doing wrong ?</p>
</div>
<div class="post-text" itemprop="text">
<p>The problem is the use of <code>==</code> where you need <code>=</code>.  This normally wouldn't cause a syntax error, but in your case, you have:</p>
<pre><code>a == not(b)
</code></pre>
<p>which is the same as:</p>
<pre><code>a == not b
</code></pre>
<p>This groups as:</p>
<pre><code>(a == not) b
</code></pre>
<p>and that causes the syntax error.</p>
<p>An assignment operator, on the other hand, has lower precedence, so:</p>
<pre><code>a = not b
</code></pre>
<p>groups as:</p>
<pre><code>a = (not b)
</code></pre>
<p>which is fine.</p>
</div>
<div class="post-text" itemprop="text">
<p>I'm pretty sure you only need one equal sign, maybe that's the mistake.
<code>=</code> is for assignement and  <code>==</code> is used for comparison. </p>
</div>
<span class="comment-copy"><code>not</code> is used as an operator, not as a function. Bad: <code>not(True)</code>; good: <code>not True</code>.</span>
<span class="comment-copy">The problem is the <code>==</code> operator.   Change it to <code>=</code> and the syntax error will go away.  Also, you normally don't want to use <code>not(x)</code>, just use <code>not x</code> unless you really need the parentheses for some reason.</span>
<span class="comment-copy">Yup... one could use <code>a == (not(b))</code> if one really wanted... but... Anyway - might be useful to link to <a href="https://docs.python.org/3/reference/expressions.html#operator-precedence" rel="nofollow noreferrer">operator precedence</a>...</span>
<span class="comment-copy">@JonClements Yes, exactly.</span>
